--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -43,8 +43,8 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-access-key-id: ASIARD4CIEC5XNQ36D6V
+        aws-secret-access-key: EeMZMo6G26d5id6OeqludHLrsEl1I9u2qCAeMMnj
         aws-region: us-east-2
 
     - name: Login to Amazon ECR
